<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_marginLeft="@dimen/mtrl_card_spacing"
    android:layout_marginTop="@dimen/mtrl_card_spacing"
    android:layout_marginRight="@dimen/mtrl_card_spacing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/certLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="13dp"
            android:text="@string/CERT_DEF"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:textColor="@color/colorAccent"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />
        <View
            android:id="@+id/tile_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10sp"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp"
            android:background="?android:attr/dividerVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/certLevel" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tile_divider"
            android:orientation="vertical">
                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleLine="false">
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/employeeChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/employee"
                        app:chipIcon="@drawable/baseline_work_24"
                        android:layout_marginEnd="8sp"
                        android:layout_marginBottom="8sp"
                        android:visibility="gone"/>
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/majorChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Other"
                        app:chipIcon="@drawable/baseline_book_24"
                        android:layout_marginEnd="8sp"
                        android:layout_marginBottom="8sp"
                        android:visibility="visible"/>
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/msChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maker_socierty"
                        app:chipIcon="@drawable/ut_maker_alpha"
                        app:chipIconSize="15sp"
                        android:layout_marginEnd="8sp"
                        android:layout_marginBottom="8sp"
                        android:visibility="gone"/>
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/adminChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/admin"
                        app:chipIcon="@drawable/baseline_vpn_key_24"
                        android:layout_marginEnd="8sp"
                        android:layout_marginBottom="8sp"
                        android:visibility="gone"/>
                    <com.google.android.material.chip.Chip
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:id="@+id/certChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/certifier"
                        app:chipIcon="@drawable/baseline_assignment_24"
                        android:layout_marginEnd="8sp"
                        android:layout_marginBottom="8sp"
                        android:visibility="gone"/>

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:id="@+id/freshmanChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Freshman Design"
                            app:chipIcon="@drawable/baseline_child_friendly_24"
                            android:layout_marginEnd="8sp"
                            android:layout_marginBottom="8sp"
                            android:visibility="gone"/>
                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:id="@+id/seniorChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Senior Design"
                            app:chipIcon="@drawable/baseline_school_24"
                            android:layout_marginEnd="8sp"
                            android:layout_marginBottom="8sp"
                            android:visibility="gone"/>
                        <com.google.android.material.chip.Chip
                            style="@style/Widget.MaterialComponents.Chip.Action"
                            android:id="@+id/orgChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Org"
                            app:chipIcon="@drawable/baseline_account_balance_24"
                            android:layout_marginEnd="8sp"
                            android:layout_marginBottom="8sp"
                            android:visibility="gone"/>
                    </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>